<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">米多多</string>
    <string name="action_settings">Settings</string>
    <string name="new_start_btn">启动应用</string>
    <string name="jump">跳过</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="input_pwd">请输入登录密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="welcome_register">欢迎注册</string>
    <string name="input_auth_code">请输入验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="miduoduo_user_protocol">米多多用户协议</string>
    <string name="reget_auth_code">秒后重新获取</string>
    <string name="login_register">登录／注册</string>
    <string name="find_password">找回密码</string>
    <string name="input_person_phone_number">请填写你个人手机号码</string>
    <string name="input_register_phone_number">请填写你注册的手机号码</string>
    <string name="verify_phone_number">验证手机号码</string>
    <string name="read_agree_user_protocol">阅读并同意米多多用户协议</string>
    <string name="set_password">设置密码</string>
    <string name="set_login_pwd">请输入登录密码</string>
    <string name="comfirm_login_pwd">再次输入登录密码</string>
    <string name="find_login_pwd">请输入新密码</string>
    <string name="comfirm_find_login_pwd">再次输入新密码</string>
    <string name="input_base_data_start_sm_model">填写基本资料，开启收(zhuan)米(qian)模式</string>
    <string name="photo">照片</string>
    <string name="name">姓名</string>
    <string name="data_of_birth">出生年月</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="upload_individual_photo">请上传个人照片</string>
    <string name="input_real_name">请输入真实姓名</string>
    <string name="select_birth_date">请选择出生日期</string>
    <string name="person_type">人员类型</string>
    <string name="student">在校生</string>
    <string name="worker">社会人员</string>
    <string name="school">学校</string>
    <string name="input_school_name">请输入院校名称</string>
    <string name="live_address">居住地点</string>
    <string name="select_live_address">请选择居住地点</string>
    <string name="privince_city">省市</string>
    <string name="area">区域</string>
    <string name="next">下一步</string>
    <string name="input_base_data">填写基本资料</string>

</resources>