<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#EEEEEE"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/input_base_data_start_sm_model" />

        <LinearLayout
            android:id="@+id/llt_photo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/tv_hint"
            android:background="#ffffff"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/tv_photo"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/photo"
                android:textColor="#000000" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/input_base_iv_photo"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="15dp"
                    android:scaleType="fitXY" />

                <Button
                    android:id="@+id/input_base_btn_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:gravity="center_vertical"
                    android:text="@string/upload_individual_photo"
                    android:textColor="#CCCCCC" />
            </FrameLayout>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_indicate" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llt_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/llt_photo"
            android:layout_marginTop="1dp"
            android:background="#ffffff"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/name"
                android:textColor="#000000" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/input_base_edt_name"
                    style="?android:attr/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/input_real_name"
                    android:singleLine="true" >

                    <requestFocus />
                </EditText>

                <ImageView
                    android:id="@+id/input_base_iv_clean_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/input_base_edt_name"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="2dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_clean_dark"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llt_date"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/llt_name"
            android:layout_marginTop="1dp"
            android:background="#ffffff"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/data_of_birth"
                android:textColor="#000000" />

            <Button
                android:id="@+id/input_base_btn_birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:gravity="left"
                android:text="@string/select_birth_date"
                android:textColor="#CCCCCC" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_indicate" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llt_sex"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/llt_date"
            android:layout_marginTop="1dp"
            android:background="#ffffff" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/sex"
                android:textColor="#000000" />

            <com.miduoduo.person.view.SegmentedGroup
                xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:id="@+id/input_base_sgt_sex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                segmentedgroup:border_width="2dp"
                segmentedgroup:checked_text_color="#EEEEEE"
                segmentedgroup:corner_radius="5dp"
                segmentedgroup:tint_color="#00B564" >

                <RadioButton
                    android:id="@+id/man"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/man" />

                <RadioButton
                    android:id="@+id/women"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/women" />
            </com.miduoduo.person.view.SegmentedGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llt__man_type"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/llt_sex"
            android:layout_marginTop="10dp"
            android:background="#ffffff" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/person_type"
                android:textColor="#000000" />

            <com.miduoduo.person.view.SegmentedGroup
                xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:id="@+id/input_base_sgt_school"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                segmentedgroup:border_width="2dp"
                segmentedgroup:checked_text_color="#EEEEEE"
                segmentedgroup:corner_radius="5dp"
                segmentedgroup:tint_color="#00B564" >

                <RadioButton
                    android:id="@+id/student"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/student" />

                <RadioButton
                    android:id="@+id/worker"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/worker" />
            </com.miduoduo.person.view.SegmentedGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_base_llt_school"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/llt__man_type"
            android:layout_marginTop="1dp"
            android:background="#ffffff"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/school"
                android:textColor="#000000" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/input_base_edt_school"
                    style="?android:attr/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/input_real_name"
                    android:singleLine="true" >

                    <requestFocus />
                </EditText>

                <ImageView
                    android:id="@+id/input_base_iv_clean_school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/input_base_edt_school"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="2dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_clean_dark"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llt_live_addr"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/input_base_llt_school"
            android:layout_marginTop="1dp"
            android:background="#ffffff"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/live_address"
                android:textColor="#000000" />

            <Button
                android:id="@+id/input_base_btn_live_addr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:gravity="left"
                android:text="@string/select_live_address"
                android:textColor="#CCCCCC" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_indicate" />
        </LinearLayout>

        <Button
            android:id="@+id/set_password_btn"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/llt_live_addr"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_bg"
            android:gravity="center"
            android:text="@string/next" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/set_password_btn"
            android:background="#00000000" />
    </RelativeLayout>

</ScrollView>