<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

    <Button
        android:id="@+id/login_btn_jump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:alpha=".3"
        android:background="@color/transparent"
        android:text="@string/jump"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="130dp"
        android:background="@color/transparent"
        android:src="@drawable/login_start" />

    <LinearLayout
        android:id="@+id/ll_name_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="220dp"
        android:alpha=".1"
        android:background="@drawable/login_name_pwd_bg"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/ll_name"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_name"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/login_man" />

            <EditText
                android:id="@+id/login_edt_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/input_phone_num"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_pwd"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/login_lock" />

            <EditText
                android:id="@+id/login_edt_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/input_pwd"
                android:inputType="textPassword"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login_btn_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ll_name_pwd"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:alpha=".3"
        android:background="#00000000"
        android:text="@string/forget_pwd"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_btn_forget"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/login" />

    <ImageView
        android:id="@+id/login_line_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_btn_login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/login_or" />

    <Button
        android:id="@+id/login_btn_register"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_line_or"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/register_btn_bg"
        android:text="@string/register"
        android:textColor="#ffffff" />

</RelativeLayout>