<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE" >

    <LinearLayout
        android:id="@+id/llt_hint"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="#FFFFFF"
            android:gravity="center_vertical"
            android:textColor="#333333" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/llt_hint"
        android:layout_marginTop="2dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/input_auth_code" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btn_code"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/gray"
            android:text="@string/get_auth_code" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:checked="true" />

    <Button
        android:id="@+id/btn_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cb_agree"
        android:layout_alignTop="@+id/cb_agree"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/cb_agree"
        android:background="@color/transparent"
        android:text="@string/read_agree_user_protocol" />

    <Button
        android:id="@+id/input_phone_num_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignLeft="@+id/cb_agree"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cb_agree"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/next" />

</RelativeLayout>