<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#EEEEEE"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:id="@+id/llt_pwd_1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ffffff"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/set_pwd_et1"
                style="?android:attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#00000000"
                android:ems="10"
                android:hint="@string/set_login_pwd"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llt_pwd_2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/llt_pwd_1"
            android:layout_marginTop="1dp"
            android:background="#ffffff"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/set_pwd_et2"
                style="?android:attr/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#00000000"
                android:ems="10"
                android:hint="@string/comfirm_login_pwd"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/set_password_btn"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/llt_pwd_2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_bg"
            android:text="@string/next" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/set_password_btn"
            android:background="#00000000" />
    </RelativeLayout>

</ScrollView>